# JVK-Base

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: attribution.md  duck.mtl
shaders/: billboard.frag  billboard.vert  billboard_input_structures.glsl  colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp  gradient_pc.comp  input_structures.glsl  lights.glsl  mesh.frag  mesh.vert  mesh_input_structures.glsl  outline.frag  outline.vert  sky.comp  tex_image.frag
src/: Commands.cpp  Commands.hpp  Context.hpp  DeletionQueue.hpp  DeletionStack.hpp  Engine.cpp  Engine.hpp  Fence.hpp  Immediate.hpp  Mesh.cpp  Mesh.hpp  Queue.hpp  README.md  Semaphore.hpp  Shaders.hpp  Swapchain.hpp  camera.cpp  camera.hpp  deletion_stack.hpp  engine.cpp  engine.hpp  immediate.hpp  instance.hpp  jvk.hpp  loader.cpp  logger.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  scene.cpp  scene.hpp  swapchain.hpp  vk_descriptors.cpp  vk_descriptors.hpp  vk_init.hpp  vk_loader.cpp  vk_loader.hpp  vk_pipelines.cpp  (+7 more)
src/jvk/: buffer.hpp  commands.cpp  commands.hpp  context.hpp  descriptor.cpp  descriptor.hpp  fence.hpp  image.hpp  init.hpp  pipeline.cpp  pipeline.hpp  queue.hpp  sampler.hpp  semaphore.hpp  shaders.hpp  swapchain.hpp  util.cpp  util.hpp
src/vk/: Allocator.cpp  Allocator.hpp  Buffer.hpp  Commands.cpp  Commands.hpp  Context.hpp  Descriptors.cpp  Descriptors.hpp  Fence.hpp  Image.cpp  Image.hpp  Pipeline.cpp  Pipeline.hpp  Queue.hpp  Render.hpp  Semaphore.hpp  Shaders.hpp  Swapchain.hpp  swapchain.hpp
